Implemented prohibition of service user ignorantly replacing an instance

--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -1,3 +1,7 @@
+Implement @ only for real method param substition of instances
+
+Implement an error response protocol
+
 Re-learn JAVA JSON encoding and decoding
 
 Learn whether JAVA JSON decoding extracts lists to Arrays or Lists;
