--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -1,17 +1,17 @@
 Implement an error response protocol
 
+Decide whether to use a Java library 
 Re-learn JAVA JSON encoding and decoding
-
-Learn whether JAVA JSON decoding extracts lists to Arrays or Lists;
-and whether ints and floats become primitives or Objects.
-Incl. what Groovy gets as input params, incl for: static void main.
 
 Get Java compilation working in project
 
-See if can call Java method from Groovy and get back generated primitive
-real arrays and real primitive values as array elements and map entry values
+Learn generally what happens to native arrays and primitive types given
+as params to Groovy functions, and when they are passed out as Java
+function calls.
 
-Depending findings above, translate some or all of Service class into Java
+Depending findings above, and Fred's suggestions if any,
+translate some or all of Service class into Java.
+Java JSON libraries awful for list and map transformations!
 
 Implement JDK logging.  Must log to stderr or log files (i.e. not stdout)
 
