--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -1,3 +1,5 @@
+Add dedicated param methodName to the call* commands
+
 Implement functions dedicated to cons/method-matching, and then
   forgiving cons/method-execution.
   Former does a cl.getDeclared*s findAll
